# equity-impact-predictor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/processed/: market_data.db
src/impact_monitor/: database.py  etl_pipeline.py  event_study.py  nlp_classifier.py  predictive_model.py
tests/: test_event_study.py
